[gd_scene load_steps=5 format=3 uid="uid://dlx6tnsja4a41"]

[ext_resource type="Script" path="res://scenes/ship-chooser.gd" id="1_fimeb"]
[ext_resource type="FontFile" uid="uid://ctxsuxx6nst1m" path="res://SpaceShooterRedux/Bonus/kenvector_future.ttf" id="2_11x6i"]
[ext_resource type="Texture2D" uid="uid://dxu1um4u40ut0" path="res://assets/arrowLeft.png" id="3_7s6sv"]
[ext_resource type="Texture2D" uid="uid://bbg6fvsob5rfe" path="res://assets/arrowRight.png" id="4_4huso"]

[node name="Ship-chooser" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_fimeb")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.0431373, 0.290196, 0.658824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_11x6i")
theme_override_font_sizes/font_size = 50
text = "Choose a Ship"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("3_7s6sv")
ignore_texture_size = true
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(396, 300)
layout_mode = 2

[node name="NextButton" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("4_4huso")
ignore_texture_size = true
stretch_mode = 3

[node name="Button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_11x6i")
text = "CONFIRM"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
